# aa-memberaudit-securegroups

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  runtests.py  setup.cfg  tox.ini
.github/workflows/: automated-checks.yml  ci-cd.yaml
memberaudit_securegroups/: __init__.py  admin.py  apps.py  auth_hooks.py  memberaudit.py  models.py
memberaudit_securegroups/locale/: django.pot
memberaudit_securegroups/locale/de/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/en/LC_MESSAGES/: django.po
memberaudit_securegroups/locale/es/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/it_IT/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ja/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ko_KR/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/ru/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/uk/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
memberaudit_securegroups/migrations/: 0001_initial.py  0002_alter_skillpointfilter_skill_point_threshold_and_more.py  0003_add_corporation_role_filter.py  0003_add_corporation_role_filter_and_more.py  0004_corporationrolefilter_is_main_and_more.py  0004_corporationtitlefilter.py  0004_skillsetfilter_character_type_and_more.py  0004_timeincorporationfilter_corporationtitlefilter.py  0005_alter_corporationrolefilter_role.py  0005_minimumcorporationmembership.py  0005_rename_is_main_corporationrolefilter_mains_only.py  0005_timeincorporationfilter.py  0006_compliance_reverse_logic_and_filter_names.py  0006_remove_corporationrolefilter_mains_only_and_more.py  0006_rename_minimumcorporationmembership_timeincorporationfilter.py  0007_remove_corporationrolefilter_allow_alts_and_more.py  0007_remove_timeincorporationfilter_days_and_more.py  0007_timeincorporationfilter_reversed_logic.py  0008_homestationfilter.py  0009_alter_compliancefilter_reversed_logic.py
memberaudit_securegroups/tests/: factories.py  factories_2.py  helpers.py  test_admin.py  test_integration.py  test_memberaudit.py  test_models.py
memberaudit_securegroups/tests/models/: test_models_1.py  test_models_2.py
testauth/: celery.py  urls.py
testauth/settings/: base.py  local.py
testauth/settings_aa4/: base.py  local.py
testauth/settings_aa5/: local.py
