[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aa-memberaudit-securegroups"
description = "Member Audit Secure Groups integration for Alliance Auth."
readme = "README.md"
keywords = ["allianceauth", "memberaudit", "securegroups"]
license = { file = "LICENSE" }
maintainers = [{ name = "Peter Pfeufer", email = "develop@ppfeufer.de" }]
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
    { name = "Rebecca Murphy", email = "rebecca@rcmurphy.me" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]
dependencies = [
    "aa-memberaudit>=5.0.2",
    "allianceauth>=5,<6",
    "allianceauth-securegroups>=0.10.1",
]

[project.urls]
Changelog = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/CHANGELOG.md"
Codecov = "https://codecov.io/gh/ppfeufer/aa-ma-securegroups"
Documentation = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/README.md"
GitHub = "https://github.com/ppfeufer/aa-ma-securegroups"
Tracker = "https://github.com/ppfeufer/aa-ma-securegroups/issues"

[project.optional-dependencies]
test = ["coverage", "django-webtest"]

[tool.flit.module]
name = "memberaudit_securegroups"
