[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aa-memberaudit-securegroups"
readme = "README.md"
keywords = ["allianceauth", "memberaudit", "securegroups"]
license = { file = "LICENSE" }
maintainers = [{ name = "Erik Kalkoken", email = "kalkoken87@gmail.com" }]
authors = [
    { name = "Peter Pfeufer", email = "develop@ppfeufer.de" },
    { name = "Erik Kalkoken", email = "kalkoken87@gmail.com" },
    { name = "Rebecca Murphy", email = "rebecca@rcmurphy.me" },
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version", "description"]
dependencies = [
    "aa-memberaudit>=5.0.2",
    "allianceauth>=5,<6",
    "allianceauth-securegroups>=0.10.1",
]

[project.urls]
Changelog = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/CHANGELOG.md"
Codecov = "https://codecov.io/gh/ppfeufer/aa-ma-securegroups"
Documentation = "https://github.com/ppfeufer/aa-ma-securegroups/blob/master/README.md"
GitHub = "https://github.com/ppfeufer/aa-ma-securegroups"
Tracker = "https://github.com/ppfeufer/aa-ma-securegroups/issues"

[project.optional-dependencies]
test = ["coverage", "factory_boy", "allianceauth-app-utils>=1.32"]

[tool.flit.module]
name = "memberaudit_securegroups"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "DJANGO",
    "ALLIANCEAUTH",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
known_allianceauth = ["allianceauth", "app_utils", "memberaudit"]
known_django = ["django", "django_webtest", "esi", "eveuniverse"]


[tool.pylint.'MASTER']
ignore-patterns = ["__init__.py", "auth_hooks.py", "apps.py"]
ignore-paths = ["^.*/tests/.*$", "^.*/migrations/.*$"]

[tool.pylint.'BASIC']
good-names = ["i", "j", "k", "ex"]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["imported-auth-user", "too-many-lines", "too-many-ancestors"]
